--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnalyzeFMRI
-Version: 1.0-5
-Date: 28/11/2001
+Version: 1.0-6
+Date: 2002-03-28
 Title: Functions for analysis of fMRI datasets stored in the ANALYZE format.
 Author: J L Marchini <marchini@stats.ox.ac.uk>
 Maintainer: J L Marchini <marchini@stats.ox.ac.uk>
