--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnalyzeFMRI
-Version: 1.0-8
-Date: 2002-09-09
+Version: 1.1-0
+Date: 2004-06-09
 Title: Functions for analysis of fMRI datasets stored in the ANALYZE format.
 Author: J L Marchini <marchini@stats.ox.ac.uk>
 Maintainer: J L Marchini <marchini@stats.ox.ac.uk>
@@ -8,3 +8,4 @@ Description: Functions for I/O, visualisation and analysis of functional Magneti
 License: GPL (version 2 or later)
 Depends: tcltk
 URL: http://www.stats.ox.ac.uk/~marchini/software.html
+Packaged: Fri Jun 11 14:15:16 2004; marchini
