--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: AnalyzeFMRI
-Version: 1.1-6
-Date: 2006-05-16
+Version: 1.1-7
+Date: 2007-10-18
 Title: Functions for analysis of fMRI datasets stored in the ANALYZE format.
-Author: J L Marchini <marchini@stats.ox.ac.uk>
-Maintainer: J L Marchini <marchini@stats.ox.ac.uk>
+Author: J L Marchini <marchini@stats.ox.ac.uk>, P Lafaye de Micheaux <Pierre.Lafaye-de-Micheaux@upmf-grenoble.fr>
+Maintainer: P Lafaye de Micheaux <Pierre.Lafaye-de-Micheaux@upmf-grenoble.fr>
 Depends: R (>= 2.3.0)
 Description: Functions for I/O, visualisation and analysis of functional Magnetic Resonance Imaging (fMRI) datasets stored in the ANALYZE format.
 License: GPL (version 2 or later)
 Depends: tcltk
-URL: http://www.stats.ox.ac.uk/~marchini/software.html
-Packaged: Tue May 16 09:44:59 2006; marchini
+Packaged: Thu Oct 18 22:32:20 2007; root
