--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: AnalyzeFMRI
-Version: 1.1-12
-Date: 2010-07-17
+Version: 1.1-13
+Date: 2011-06-05
 Title: Functions for analysis of fMRI datasets stored in the ANALYZE or
         NIFTI format.
 Author: J L Marchini <marchini@stats.ox.ac.uk>, P Lafaye de Micheaux
-        <Pierre.Lafaye-de-Micheaux@upmf-grenoble.fr>
-Maintainer: P Lafaye de Micheaux
-        <Pierre.Lafaye-de-Micheaux@upmf-grenoble.fr>
+        <lafaye@dms.umontreal.ca>
+Maintainer: P Lafaye de Micheaux <lafaye@dms.umontreal.ca>
 Depends: tcltk, R.matlab, fastICA
 Description: Functions for I/O, visualisation and analysis of
         functional Magnetic Resonance Imaging (fMRI) datasets stored in
         the ANALYZE or NIFTI format.
 License: GPL (>= 2)
-Packaged: 2010-07-17 14:20:18 UTC; root
+Packaged: 2011-06-06 00:42:11 UTC; lafaye
 Repository: CRAN
-Date/Publication: 2010-07-24 19:40:27
+Date/Publication: 2011-06-06 06:26:02
