--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnalyzeFMRI
-Version: 1.1-13
-Date: 2011-06-05
+Version: 1.1-14
+Date: 2011-10-19
 Title: Functions for analysis of fMRI datasets stored in the ANALYZE or
         NIFTI format.
 Author: J L Marchini <marchini@stats.ox.ac.uk>, P Lafaye de Micheaux
@@ -11,6 +11,6 @@ Description: Functions for I/O, visualisation and analysis of
         functional Magnetic Resonance Imaging (fMRI) datasets stored in
         the ANALYZE or NIFTI format.
 License: GPL (>= 2)
-Packaged: 2011-06-06 00:42:11 UTC; lafaye
+Packaged: 2012-10-29 13:13:02 UTC; ripley
 Repository: CRAN
-Date/Publication: 2011-06-06 06:26:02
+Date/Publication: 2012-10-29 13:13:36
