--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: AnalyzeFMRI
-Version: 1.1-15
-Date: 2012-04-05
+Version: 1.1-16
+Date: 2013-03-19
 Title: Functions for analysis of fMRI datasets stored in the ANALYZE or
         NIFTI format.
 Author: P Lafaye de Micheaux <lafaye@dms.umontreal.ca>, J L Marchini
@@ -11,6 +11,7 @@ Description: Functions for I/O, visualisation and analysis of
         functional Magnetic Resonance Imaging (fMRI) datasets stored in
         the ANALYZE or NIFTI format.
 License: GPL (>= 2)
-Packaged: 2012-10-30 16:40:34 UTC; root
+Packaged: 2013-03-19 12:41:20 UTC; lafaye
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-10-30 17:16:55
+Date/Publication: 2013-03-19 15:38:10
